--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ modId=dtbyg
 modVersion=1.1.0-Beta1
 group=maxhyper.dtbyg
 
-mcVersion=1.18.2
-forgeVersion=40.1.84
-mappingsVersion=2022.05.01
+mcVersion=1.19.2
+forgeVersion=43.3.0
+mappingsVersion=2022.11.27
 
-dynamicTreesVersion=1.0.4
-dynamicTreesPlusVersion=1.0.4
-jeiVersion=9.7.1.255
+dynamicTreesVersion=1.1.0-BETA10
+dynamicTreesPlusVersion=1.1.3
+jeiVersion=11.3.0.262
 suggestionProviderFixVersion=1.0.0
 ccVersion=1.101.2
 
 curseFileType=beta
 
-org.gradle.jvmargs=-Xmx8G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
